# OFC-Pineapple-Solver

./: .gitignore  debug_last_prompt.txt  debug_last_result.txt  main.py  pyproject.toml
adb/: __init__.py  config.py  recognizer.py  screen.py
ofc/: __init__.py  board.py  card.py  cli.py  evaluator.py  scoring.py  solver.py
tests/: test_card.py  test_evaluator.py  test_scoring.py  test_solver.py
